--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -1,10 +1,298 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.jzarsuelo.android.amaysim.SummaryActivity">
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
+    tools:context="com.jzarsuelo.android.amaysim.SummaryActivity"
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.5">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/tv_account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:paddingBottom="8dp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:text="Account Information"
+                    android:textColor="@color/colorPrimaryDark"/>
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_account"
+                    android:text="Name:  Zarsuelo, Jan Paolo"/>
+
+                <TextView
+                    android:id="@+id/tv_payment_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_name"
+                    android:text="Payment type:  Prepaid"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
+
+                <TextView
+                    android:id="@+id/tv_unbilled_charges"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_payment_type"
+                    android:text="Unbilled charges:  "
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_payment_type"/>
+
+                <TextView
+                    android:id="@+id/tv_next_billing_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_payment_type"
+                    android:text="Next billing date:  "
+                    android:visibility="gone"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_unbilled_charges"/>
+
+                <TextView
+                    android:id="@+id/tv_contact_no"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_payment_type"
+                    android:text="Contact no: "
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_next_billing_date"/>
+
+                <TextView
+                    android:id="@+id/tv_email_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_payment_type"
+                    android:text="Email address:  jpzarsuelo@gmail.com"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_contact_no"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_subscription"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/cv_account"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="16dp">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/tv_subscription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:paddingBottom="8dp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:text="Subscription"
+                    android:textColor="@color/colorPrimaryDark"/>
+
+                <TextView
+                    android:id="@+id/tv_data_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_subscription"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Data balance:  "/>
+
+                <TextView
+                    android:id="@+id/tv_credit_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_data_balance"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Credit balance:  "/>
+
+                <TextView
+                    android:id="@+id/tv_rollover_credit_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_credit_balance"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Rollover credit balance:  "/>
+
+                <TextView
+                    android:id="@+id/tv_rollover_data_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_rollover_credit_balance"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Rollover data balance:  "/>
+
+                <TextView
+                    android:id="@+id/tv_international_talk_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_rollover_data_balance"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="International talk balance:  "/>
+
+                <TextView
+                    android:id="@+id/tv_expiry_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_international_talk_balance"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Expiry date:  "/>
+
+                <TextView
+                    android:id="@+id/tv_auto_renewal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_expiry_date"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Auto renewal:  "/>
+
+                <TextView
+                    android:id="@+id/primary_subscription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_auto_renewal"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Primary subscription:  "/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_product"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/cv_subscription"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="16dp">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/tv_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:paddingBottom="8dp"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:text="Product"
+                    android:textColor="@color/colorPrimaryDark"/>
+
+                <TextView
+                    android:id="@+id/tv_product_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_product"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Name:  UNLIMITED 7GB"/>
+
+                <TextView
+                    android:id="@+id/tv_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_product_name"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Data:  "/>
+
+                <TextView
+                    android:id="@+id/tv_credit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_data"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Credit:  "/>
+
+                <TextView
+                    android:id="@+id/tv_international_talk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_credit"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="International Talk:  "/>
+
+                <TextView
+                    android:id="@+id/tv_unlimited_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_international_talk"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Unlimited Text:  "/>
+
+                <TextView
+                    android:id="@+id/tv_unlimited_talk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_unlimited_text"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Unlimited Talk:  "/>
+
+                <TextView
+                    android:id="@+id/tv_unlimited_international_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_unlimited_talk"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Unlimited International Text:  "/>
+
+                <TextView
+                    android:id="@+id/tv_unlimited_international_talk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_unlimited_international_text"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Unlimited International Talk:  "/>
+
+                <TextView
+                    android:id="@+id/tv_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_unlimited_international_talk"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="Price:  "/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
